--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="tic-tac-toe.css">
 </head>
 <body>
-    <header>Tic Tac Toe <div>Player 1: X <br>Player 2: O</div><div> First player start as X <br>Second player start as 0</div></header>
+    <header><span>Tic Tac Toe </span><div class="notation">Player 1: X <br>Player 2: O</div><div class="note">***************************************** <br> First player start as X <br>Second player start as 0</div>************************************</header>
     <div class="board">
         <div id="b1" class="square"></div>
         <div id="b2" class="square"></div>
